# tira-backend

./: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  Rocket.toml  dev.sh  docker-compose.yml  insert_test_users.sql  package.json
.github/: dependabot.yml
.github/workflows/: rust.yml
.husky/: pre-commit
migrations/: 20240414060150_create_users.sql  20240414060229_create_categories.sql  20240414060251_create_tickets.sql  20240414060303_create_assignments.sql  20240414060316_create_comments.sql  20240414060326_create_sessions.sql
migrations/2022-01-23-234257_create_users/: up.sql
migrations/2022-02-02-011301_create_categories/: up.sql
migrations/2022-02-02-024130_create_tickets/: up.sql
migrations/2022-02-04-013022_create_assignments/: down.sql  up.sql
migrations/2022-02-04-020229_create_comments/: up.sql
migrations/2022-02-12-184220_create_sessions/: up.sql
src/: main.rs  models.rs  schema.rs  service.rs
src/controller/: assignments.rs  categories.rs  comments.rs  images.rs  mod.rs  sessions.rs  tickets.rs  users.rs
src/dao/: assignments.rs  categories.rs  comments.rs  mod.rs  sessions.rs  tickets.rs  users.rs
src/models/: mod.rs  patch.rs  success.rs
src/service/: assignments.rs  categories.rs  comments.rs  emails.rs  images.rs  mod.rs  security.rs  sessions.rs  tickets.rs  users.rs
