[package]
name = "tira-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.87"
aws-config = "0.15.0"
aws-sdk-s3 = "0.15.0"
axum = { version = "0.7.5", features = ["multipart"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.17", features = ["env", "derive"] }
cookie = "0.18.1"
ctrlc = { version = "3.4.5", features = ["termination"] }
dotenv = "0.15.0"
http-body-util = "0.1.2"
lettre = "0.11.8"
log = "0.4.21"
openssl = { version = "0.10.66", features = ["vendored"] }
regex = "1.10.6"
rust-crypto = "0.2.36"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
simple_logger = "5.0.0"
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "postgres", "chrono", "tls-rustls" ] }
time = "0.3.36"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = { version = "1.10.0", features = ["v4"] }
