[package]
name = "tira-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
aws-config = "0.15.0"
aws-sdk-s3 = "0.15.0"
axum = { version = "0.8.2", features = ["multipart"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.28", features = ["env", "derive"] }
cookie = "0.18.1"
ctrlc = { version = "3.4.5", features = ["termination"] }
dotenv = "0.15.0"
http-body-util = "0.1.2"
lettre = "0.11.12"
log = "0.4.25"
openssl = { version = "0.10.70", features = ["vendored"] }
regex = "1.11.1"
rust-crypto = "0.2.36"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
simple_logger = "5.0.0"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "postgres", "chrono", "tls-rustls" ] }
time = "0.3.37"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = { version = "1.13.1", features = ["v4"] }
